--- a/othello-online/package.json
+++ b/othello-online/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-loading": "^2.0.2",
+    "react-native": "^0.55.3",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4"
   },
