--- a/othello-online/package.json
+++ b/othello-online/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "npm": "^5.8.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-loading": "^2.0.2",
